# Voice-recognition

./: .gitignore  README.md  deconvolution.ipynb  log_basis.py  log_basis_notebook.ipynb  main.py  models.py  natural_sounds.py  pyproject.toml  shorten_wav.py  sound_generation.ipynb  sound_generator.py  stft transformation.ipynb  stft.py  stft_long_spectrum.py  stft_notebook.ipynb  voice_recognition.ipynb
